Fix: Website content small and not readable in mobile
Updated templates/base.html and static/style.css to make website adaptive to mobile view

--- a/static/style.css
+++ b/static/style.css
@@ -82,3 +82,10 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
+@media (max-width: 600px) { 
+  table { 
+    display: block;
+    overflow-x: auto;
+  }
+}
